--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="input-group flex-nowrap shadow-lg rounded">
-            <input type="search" class="form-control" placeholder="Search task..."/>
+            <input type="search" class="form-control" placeholder="Search task..." oninput="searchTask.apply(this, arguments)"/>
             <span class="input-group-text" id="addon-wrapper"><i class="fas fa-search"></i></span>
           </div>
         </div>
